Rationalised random number generation; disabled some tests for investigation of sporadic failure.